--- a/summary.html
+++ b/summary.html
@@ -6,15 +6,15 @@
 <body onload="Initialize()">
     <div class="headers">
         <h1>Pathways to Academic English Practice</h1>
-        <h2>Practice Summarizing:</h2>
+        <h1>Practice Summarizing: </h1>
+        <h3>Select a passage or enter your own.</h3>
     </div>
-    <br>
     <div class="main_stuff">
         <div class="Drop-Down_Box">
-            <label for="passage_select">Select passage:</label>
+        
             <br>
             <select id="passage_select" onchange="GetPassage()">
-                <option value="default">Select Passage</option>
+                <option value="default">What do you want to summarize today?</option>
                 <option value="Passage1">Worksheet Passage 1: Horses</option>
                 <option value="Passage2">Worksheet Passage 2: Intermodal Containers</option>
                 <option value="Custom">Enter My Own Text</option>
@@ -26,14 +26,14 @@
         <br>
         </div>
         <br>
-        <textarea id="summary_text" rows="20" cols="70" placeholder="write summary here"></textarea>
+        <textarea id="summary_text" rows="20" cols="70" placeholder="Type your summary here."></textarea>
         <br>
         <button class="button_class" id="check_button" onclick="Check_Now()">Check Your Summary</button>
         <br>
     </div>
     <div class="white"></div>
     <div class="results_class">
-    <p id="results_text">Advice for your summary:</p>
+    <p id="results_text"><h3>Tips to Improve</h3></p>
     </div>
     <script type="text/javascript" src="summary.js"></script>
 </body>
