fixed one small bug

--- a/summary.html
+++ b/summary.html
@@ -33,7 +33,7 @@
     </div>
     <div class="white"></div>
     <div class="results_class">
-    <p id="results_text"><h3>Tips to Improve</h3></p>
+    <h3 id="results_text">Tips to Improve</h3>
     </div>
     <script type="text/javascript" src="summary.js"></script>
 </body>
