Ready for training

--- a/paraphrase.html
+++ b/paraphrase.html
@@ -43,6 +43,65 @@
                 <p id="p1q2_example" class="example_answer" style="display:none">Social structures are improved by raising taxes, cutting spending, and relying more on volunteers.</p>
                 <br>
 
+                <label for="p1q3" class="question_sentence" id="p1q3_label">3. English is either an officially used language or one of several languages used in almost 60 countries, and is learned in an extensive amount as a second language.</label>
+                <br>
+                <input type="text" class="answer_box" id="p1q3" placeholder="Write or copy-and-paste your answer here">
+                    <br>
+                    <div id="answeredp1q3" style="display:none">
+                    <label for="p1q3_feedback" class="feedback_label">Advice:</label><p id="p1q3_feedback" class="feedback">Feedback goes here.</p><button id="p1q3_button" class="example_ask_button" onclick="Getp1q3()">See Example Answer</button>
+                    </div>
+                <p id="p1q3_example" class="example_answer" style="display:none">English is either an official language or one of several languages used in almost 60 countries, and is learned extensively as a second language.</p>
+                <br>
+
+                <label for="p1q4" class="question_sentence" id="p1q4_label">4. Self-concept, a collection of beliefs about oneself, is different from self-awareness, which refers to how consistent knowledge of the real world is to one's attitudes and dispositions.</label>
+                <br>
+                <input type="text" class="answer_box" id="p1q4" placeholder="Write or copy-and-paste your answer here">
+                    <br>
+                    <div id="answeredp1q4" style="display:none">
+                    <label for="p1q4_feedback" class="feedback_label">Advice:</label><p id="p1q4_feedback" class="feedback">Feedback goes here.</p><button id="p1q4_button" class="example_ask_button" onclick="Getp1q4()">See Example Answer</button>
+                    </div>
+                <p id="p1q4_example" class="example_answer" style="display:none">Self-concept, a collective belief about oneself, differs from self-awareness, which refers to consistency between knowledge of the real world and one's attitudes and dispositions.</p>
+                <br>
+
+                <label for="p1q5" class="question_sentence" id="p1q5_label">5. Acer leipoense, a species of Maple tree that grows in the southwest part of China, is often sought by people who live locally in Sichuan.</label>
+                <br>
+                <input type="text" class="answer_box" id="p1q5" placeholder="Write or copy-and-paste your answer here">
+                    <br>
+                    <div id="answeredp1q5" style="display:none">
+                    <label for="p1q5_feedback" class="feedback_label">Advice:</label><p id="p1q5_feedback" class="feedback">Feedback goes here.</p><button id="p1q5_button" class="example_ask_button" onclick="Getp1q5()">See Example Answer</button>
+                    </div>
+                <p id="p1q5_example" class="example_answer" style="display:none">Local people (or locals) living in Sichuan often seek Acer leipoense, a species of Maple tree that grows in southwestern China.</p>
+                <br>
+
+                <label for="p1q6" class="question_sentence" id="p1q6_label">6. The red-billed streamertail, a member of the hummingbird family, generally feeds on the nectar from flowers indigenous to Jamaica.</label>
+                <br>
+                <input type="text" class="answer_box" id="p1q6" placeholder="Write or copy-and-paste your answer here">
+                    <br>
+                    <div id="answeredp1q6" style="display:none">
+                    <label for="p1q6_feedback" class="feedback_label">Advice:</label><p id="p1q6_feedback" class="feedback">Feedback goes here.</p><button id="p1q6_button" class="example_ask_button" onclick="Getp1q6()">See Example Answer</button>
+                    </div>
+                <p id="p1q6_example" class="example_answer" style="display:none">In general, the nectar from flowers indigenous to Jamaica are fed on by the red-billed steamertail, a member of the hummingbird family.</p>
+                <br>
+
+                <label for="p1q7" class="question_sentence" id="p1q7_label">7. The Kidston Dam provided water for the Kidston Gold Mine, which closed in 2001.</label>
+                <br>
+                <input type="text" class="answer_box" id="p1q7" placeholder="Write or copy-and-paste your answer here">
+                    <br>
+                    <div id="answeredp1q7" style="display:none">
+                    <label for="p1q7_feedback" class="feedback_label">Advice:</label><p id="p1q7_feedback" class="feedback">Feedback goes here.</p><button id="p1q7_button" class="example_ask_button" onclick="Getp1q7()">See Example Answer</button>
+                    </div>
+                <p id="p1q7_example" class="example_answer" style="display:none">Water for the Kidston Gold Mine, which closed in 2001, was provided by the Kidston Dam.</p>
+                <br>
+
+                <label for="p1q8" class="question_sentence" id="p1q8_label">8. The Confederate Army of Northern Virginia made a retreat from the city of Gettysburg because it was defeated by the Union Army, and now the event is remembered by us as The Retreat from Gettysburg.</label>
+                <br>
+                <input type="text" class="answer_box" id="p1q8" placeholder="Write or copy-and-paste your answer here">
+                    <br>
+                    <div id="answeredp1q8" style="display:none">
+                    <label for="p1q8_feedback" class="feedback_label">Advice:</label><p id="p1q8_feedback" class="feedback">Feedback goes here.</p><button id="p1q8_button" class="example_ask_button" onclick="Getp1q8()">See Example Answer</button>
+                    </div>
+                <p id="p1q8_example" class="example_answer" style="display:none">The Confederate Army of Northern Virginia retreated from the city of Gettysburg because the Union Army defeated it, and now we remember the event as The Retreat from Gettysburg.</p>
+                <br>
         <button id="check_part1" class="check_button" onclick="CheckPart1()">Check Answers</button>
         </div>
         
