added visuals and idiot proofing

--- a/summary.html
+++ b/summary.html
@@ -26,16 +26,32 @@
         <br>
         </div>
         <br>
-        <textarea id="summary_text" rows="20" cols="70" placeholder="Type your summary here."></textarea>
+        <textarea id="summary_text" rows="20" cols="70" placeholder="Type your summary here. &#10 &#10Your summary should be about 25~35% of the original passage.&#10 &#10Use the tips in Chapter 4 of Pathway to Academic English 3rd Edition when writing your summary."></textarea>
         <br>
         <button class="button_class" id="check_button" onclick="Check_Now()">Check Your Summary</button>
         <br>
     </div>
     <div class="white"></div>
-    <div class="results_class">
-    <h3 id="results_text">Tips to Improve</h3>
+    <div class="results_class" id="alltheresults" style="display:none">
+        <h2 style="text-align:center; color: crimson">Advice: </h2>
+        <h3 id="results_length" style="text-align:center">Length</h3>
+        <br>
+        <div id="length_graph" class="visual" style="width:80%; height:400px">
+            <canvas id="myLength" style="width:100%; max-width:700px; margin:auto"></canvas>
+        </div>
+        <br>
+        <p id="length_advice"></p>
+        <br>
+        <h3 id="results_repeating" style="text-align:center">Repeats</h3>
+        <div class ="visual" id="graph_container" style="width:80%; height:400px">
+            <canvas id="myChart" style="width:100%; max-width:700px; text-align: center; margin:auto"></canvas>
+        </div>
+        <p id="repeats_advice"></p>
+        <h2 style="text-align:center; color:crimson">Repeated 5-word Chunks</h2>
+        <p id="repeats_text"></p>
     </div>
     <script type="text/javascript" src="summary.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </body>
 
 
