Testing for students

--- a/summary.html
+++ b/summary.html
@@ -6,7 +6,7 @@
 <body onload="Initialize()">
     <div class="headers">
         <h1>Pathways to Academic English Practice</h1>
-        <h1>Practice Summarizing: </h1>
+        <h1>Practice Saying Hello: </h1>
         <h3>Select a passage or enter your own.</h3>
     </div>
     <div class="main_stuff">
